--- a/Chulsu/Chulsu.vcxproj
+++ b/Chulsu/Chulsu.vcxproj
@@ -148,14 +148,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="D3D12MemAlloc.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="ResourceStateTracker.cpp" />
     <ClCompile Include="DX12Renderer.cpp" />
     <ClCompile Include="Framework.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AssetManager.h" />
     <ClInclude Include="D3D12MemAlloc.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="ResourceStateTracker.h" />
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="DX12Renderer.h" />
