--- a/Chulsu/Chulsu.vcxproj
+++ b/Chulsu/Chulsu.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="DX12Renderer.cpp" />
     <ClCompile Include="Framework.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssetManager.h" />
@@ -166,6 +167,7 @@
     <ClInclude Include="Framework.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
