--- a/Chulsu/packages.config
+++ b/Chulsu/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Assimp" version="3.0.0" targetFramework="native" />
-  <package id="Assimp.redist" version="3.0.0" targetFramework="native" />
   <package id="Microsoft.Direct3D.D3D12" version="1.606.3" targetFramework="native" />
+  <package id="vcpkg.C.vcpkg" version="1.0.0" targetFramework="native" />
 </packages>
