modify few structures, and Add SubObject types

--- a/Chulsu/Chulsu.vcxproj.filters
+++ b/Chulsu/Chulsu.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="소스 파일\Core">
       <UniqueIdentifier>{73015a19-f94a-45aa-a81b-adc15d09e8a3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shader">
+      <UniqueIdentifier>{1adc424d-e02a-4602-bbb5-d0b1ba5b360f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DX12Renderer.cpp">
@@ -92,11 +95,16 @@
     <ClInclude Include="Pipeline.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Shader.h">
+    <ClInclude Include="SubObject.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shaders\DefaultRayTrace.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
