TLAS doesn't upload to GPU... wtf

--- a/Chulsu/Chulsu.vcxproj
+++ b/Chulsu/Chulsu.vcxproj
@@ -150,6 +150,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AssetManager.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="D3D12MemAlloc.cpp" />
     <ClCompile Include="DDSTextureLoader12.cpp" />
     <ClCompile Include="Instance.cpp" />
@@ -165,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssetManager.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="D3D12MemAlloc.h" />
     <ClInclude Include="DDSTextureLoader12.h" />
     <ClInclude Include="Instance.h" />
