--- a/Chulsu/packages.config
+++ b/Chulsu/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Direct3D.D3D12" version="1.606.3" targetFramework="native" />
   <package id="vcpkg.C.vcpkg" version="1.0.0" targetFramework="native" />
+  <package id="WinPixEventRuntime" version="1.0.220810001" targetFramework="native" />
 </packages>
