--- a/Chulsu/Chulsu.vcxproj.filters
+++ b/Chulsu/Chulsu.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClInclude Include="Camera.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ConstantBuffer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
