--- a/Chulsu/Chulsu.vcxproj
+++ b/Chulsu/Chulsu.vcxproj
@@ -199,6 +199,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Shaders\BRDF.hlsli" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\DefaultRayTrace.hlsl">
